backend/app/assets/stylesheets/spree/backend/components/_tables.scss
table.table {
  font-size: $font-size-sm;

  .move-handle {
    cursor: grab;
  }

  th {
    padding: 0.5rem;

    &.handel-head {
      width: 50px;
    }
  }

  td {
    padding: 0.5rem;
  }

  .badge {
    font-size: 0.85em;
  }

  thead {
    th {
      text-transform: uppercase;
      font-size: $small-font-size;
      padding: 0.5rem;
      padding-top: 14px;
      padding-bottom: 14px;
      vertical-align: top;
      border-top: 0;
    }
  }

  tbody {
    tr {
      background: white;
      td {
        vertical-align: middle;
        .filterable {
          margin-left: .2em;
          cursor: pointer;
          width: 0.9rem;
          height:0.9rem;
          opacity: 0.25;
          &:hover {
            opacity: 1;
          }
        }
      }
    }
  }
}

.table-active-filters {
  display: none;
  margin: -.5em 0 .9em;

  .js-filter {
    .icon {
      cursor: pointer;
    }
  }

  .badge-secondary {
    .icon {
      filter: invert(1);
    }
  }

  .badge {
    display: inline-block;
    margin-right: .5em;
    margin-bottom: .5em;

    &:hover {
      opacity: .8;
    }
  }
}

.card {
  > .table,
  .table-responsive > .table {
  	border-right: 0;
  	border-left: 0;
    margin-bottom: 0;

    &:last-child, &:last-of-type {
			border-bottom: 0;
		}

  	td:first-child,
		th:first-child {
			border-left: 0;
		}

  	td:last-child,
		th:last-child {
			border-right: 0;
		}

  	tr:first-child td,
		tr:first-child th {
			border-top: 0;
		}

  	tr:last-child td {
			border-bottom: 0;
		}
	}

  .card-header + .table,
  .card-header + .table-responsive > .table {
    border-top: 0;
	}
}

div.table-responsive table.table-bordered {
  border-top: 1px solid $input-border-color !important;
}

.sortable-drag-v {
  border: 1px solid $info;
  border-radius: 5px;
  width:100%;
  text-align: right;
  opacity: 0;
  td {
    border-top: none;
    opacity:0;
    &:first-child {
    opacity: 1;
    }
  }
}

